--- a/app/src/main/res/layout/activity_location_summary.xml
+++ b/app/src/main/res/layout/activity_location_summary.xml
@@ -1,7 +1,35 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.traveler.activity.LocationSummaryActivity"
-    tools:ignore="MergeRootFrame" />
+    android:layout_height="match_parent">
+
+    <com.traveler.views.NotifyingScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+    </com.traveler.views.NotifyingScrollView>
+
+    <com.traveler.views.ProgressView
+        android:id="@+id/progress_view"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        app:progressViewErrorText="@string/cant_load_place_details"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="fill_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/teal"
+        app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+
+</RelativeLayout>
