--- a/app/src/main/res/layout/fragment_location_summary.xml
+++ b/app/src/main/res/layout/fragment_location_summary.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:animateLayoutChanges="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -20,6 +21,7 @@
             <LinearLayout
                 android:layout_marginTop="1dp"
                 android:id="@+id/title_header"
+                android:background="@color/dark_grey"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -37,6 +39,7 @@
                     android:layout_height="wrap_content" />
 
                 <View
+                    android:id="@+id/separator_line"
                     android:background="#fff"
                     android:layout_width="1dp"
                     android:layout_height="fill_parent" />
@@ -53,6 +56,8 @@
 
             <com.traveler.views.PreviewCard
                 android:id="@+id/description_card"
+                android:visibility="gone"
+                tools:visibility="visible"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 app:previewCardTitle="DESCRIPTION"
@@ -61,6 +66,8 @@
 
             <com.traveler.views.PreviewCard
                 android:id="@+id/attractions_card"
+                android:visibility="gone"
+                tools:visibility="visible"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 app:previewCardTitle="ATTRACTIONS"
@@ -69,6 +76,8 @@
 
             <com.traveler.views.PreviewCard
                 android:id="@+id/videos_card"
+                android:visibility="gone"
+                tools:visibility="visible"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 app:previewCardTitle="VIDEOS"
@@ -78,20 +87,5 @@
         </LinearLayout>
     </ScrollView>
 
-    <!-- Progress View -->
-    <FrameLayout
-        android:id="@+id/progress_view"
-        android:visibility="gone"
-        android:background="@color/white"
-        android:layout_centerInParent="true"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </FrameLayout>
 
 </RelativeLayout>
