--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -27,7 +27,7 @@
         android:paddingTop="20dp"
         android:paddingLeft="6dp"
         android:paddingRight="6dp"
-        android:paddingBottom="6dp"
+        android:paddingBottom="20dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
@@ -39,7 +39,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <com.traveler.views.SmartTextView
             android:id="@+id/rating"
             tools:text="Rating: 5 stars"
             android:textColor="@android:color/white"
@@ -67,7 +67,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <com.traveler.views.SmartTextView
             android:id="@+id/place_address"
             tools:text="Address 34/34 Residence"
             android:gravity="center_vertical"
@@ -77,7 +77,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <com.traveler.views.SmartTextView
             android:id="@+id/phone_number"
             tools:text="+796 87454758"
             android:gravity="center_vertical"
@@ -87,7 +87,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <com.traveler.views.SmartTextView
             android:id="@+id/web_site"
             tools:text="http://google.com"
             android:gravity="center_vertical"
