--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -25,8 +25,8 @@
         tools:background="#424242"
         android:orientation="vertical"
         android:paddingTop="20dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:paddingBottom="20dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -64,14 +64,20 @@
     <LinearLayout
         android:layout_below="@id/details_header_container"
         android:orientation="vertical"
+        android:paddingTop="4dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
         <com.traveler.views.SmartTextView
             android:id="@+id/place_address"
             tools:text="Address 34/34 Residence"
+            android:drawablePadding="14dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="6dp"
             android:gravity="center_vertical"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:drawableLeft="@drawable/ic_location"
             android:drawableStart="@drawable/ic_location"
             android:layout_width="fill_parent"
@@ -80,8 +86,11 @@
         <com.traveler.views.SmartTextView
             android:id="@+id/phone_number"
             tools:text="+796 87454758"
+            android:drawablePadding="14dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
             android:gravity="center_vertical"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:drawableLeft="@drawable/ic_phone"
             android:drawableStart="@drawable/ic_phone"
             android:layout_width="fill_parent"
@@ -90,9 +99,12 @@
         <com.traveler.views.SmartTextView
             android:id="@+id/web_site"
             tools:text="http://google.com"
+            android:drawablePadding="14dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:drawableLeft="@drawable/ic_website"
             android:drawableStart="@drawable/ic_website"
             android:layout_width="fill_parent"
