Added rating bar for the average score of place

--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -41,10 +41,23 @@
 
         <com.traveler.views.SmartTextView
             android:id="@+id/rating"
+            android:visibility="gone"
             tools:text="Rating: 5 stars"
             android:textColor="@android:color/white"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
+
+        <RatingBar
+            android:id="@+id/ratingbar"
+            style="@style/AverageRatingBar"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="-1dp"
+            android:isIndicator="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="2.5"
+            android:stepSize="0.5" />
 
     </LinearLayout>
 
