--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -42,13 +42,15 @@
         <RatingBar
             android:id="@+id/rating_bar"
             style="@style/AverageRatingBar"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:layout_marginTop="4dp"
             android:layout_marginLeft="-1dp"
             android:isIndicator="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5"
-            android:rating="2.5"
+            android:rating="5"
             android:stepSize="0.5" />
 
     </LinearLayout>
