--- a/app/src/main/res/drawable/average_rating_bar.xml
+++ b/app/src/main/res/drawable/average_rating_bar.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background"
-        android:drawable="@drawable/average_rating_bar_empty" />
+        android:drawable="@drawable/ic_star_off" />
     <item android:id="@android:id/secondaryProgress"
-        android:drawable="@drawable/average_rating_bar_empty" />
+        android:drawable="@drawable/ic_star_off" />
     <item android:id="@android:id/progress"
-        android:drawable="@drawable/average_rating_bar_full" />
+        android:drawable="@drawable/ic_star_on" />
 </layer-list>
