--- a/app/src/main/res/layout/layout_review.xml
+++ b/app/src/main/res/layout/layout_review.xml
@@ -17,7 +17,9 @@
 
     <RatingBar
         android:id="@+id/rating_bar"
-        style="?android:attr/ratingBarStyleSmall"
+        style="@style/UserRatingBar"
+        android:isIndicator="true"
+        android:numStars="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
