--- a/app/src/main/res/layout/item_autocomplete.xml
+++ b/app/src/main/res/layout/item_autocomplete.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    tools:text="Berlin"
+    android:padding="12dp"
+    android:textSize="16sp"
+    android:textColor="@color/dark_grey" />
