--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -6,10 +6,8 @@
 
 
     <RelativeLayout
-        android:id="@+id/navigation_drawer_header"
         android:layout_width="fill_parent"
-        android:layout_height="150dp">
-
+        android:layout_height="125dp">
 
         <ImageView
             android:layout_width="fill_parent"
@@ -17,19 +15,36 @@
             android:scaleType="centerCrop"
             android:src="@drawable/awesome" />
 
-        <TextView
-            android:id="@+id/subtitle"
+        <FrameLayout
+            android:id="@+id/scrim_background"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Discover beautiful places to visit"
-            android:layout_alignParentBottom="true" />
+            android:layout_height="fill_parent" />
 
-        <TextView
-            android:id="@+id/title"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Explore"
-            android:layout_above="@id/subtitle" />
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:padding="14dp"
+            >
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="26sp"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/subtitle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/logo"
+                android:textStyle="italic"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+        </LinearLayout>
 
     </RelativeLayout>
 
