--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -4,14 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="80dp"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:orientation="vertical"
     tools:context=".LocationSearchActivity">
 
     <TextView
         android:text="@string/i_want_to_visit"
-        android:textSize="18dp"
+        android:textSize="22sp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginBottom="4dp"
+        android:textColor="@color/dark_grey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -32,8 +35,11 @@
         <Button
             android:id="@+id/go"
             android:text="@string/go"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="12dp"
+            android:textColor="@color/white"
+            android:background="@drawable/view_all_selector"/>
 
     </LinearLayout>
 
