--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -25,7 +25,7 @@
 
         <AutoCompleteTextView
             android:id="@+id/location_autocomplete"
-            android:hint="@string/city"
+            android:hint="@string/country_or_city"
             android:singleLine="true"
             android:layout_weight="1"
             android:layout_width="0dp"
