--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/place_name"
-            tools:text="Residence ds fdsf dsf dsf ds fds fdsfdd"
+            tools:text="Chateau Vartely"
             android:textSize="26sp"
             android:textColor="@android:color/white"
             android:layout_width="fill_parent"
@@ -63,7 +63,7 @@
         app:fab_colorNormal="@color/white"
         app:fab_colorPressed="@color/grey"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="-36dp"
+        android:layout_marginBottom="-40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignBottom="@id/place_detail_picture"
         android:layout_marginRight="20dp" />
