--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="4dp"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
