--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -4,6 +4,7 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="4dp"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
@@ -18,7 +19,7 @@
             android:src="@drawable/lac"
             android:scaleType="centerCrop"
             android:layout_width="130dp"
-            android:layout_height="80dp" />
+            android:layout_height="75dp" />
 
         <TextView
             android:id="@+id/duration"
