--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/duration"
-            android:background="@android:color/black"
+            android:background="@color/black_transparent"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:paddingLeft="4dp"
