Change to AppCompatActivity

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,7 +12,7 @@
     </declare-styleable>
 
     <declare-styleable name="TypefacedTextView">
-        <attr name="font" format="string" />
+        <attr name="textviewFont" format="string" />
     </declare-styleable>
 
 </resources>
